--- a/auth-service/samconfig.toml
+++ b/auth-service/samconfig.toml
@@ -6,7 +6,7 @@ stack_name = "dev-auth-service"
 s3_prefix = "dev-auth-service"
 region = "us-east-1"
 resolve_s3 = true
-capabilities = "CAPABILITY_IAM"
+capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM"
 parameter_overrides = "MainDomain=\"devfastchargeapi.com\" Route53ZoneId=\"Z07362872NENGXHWMNLU5\" EnvDevDomain=\"1\""
 image_repositories = []
 no_fail_on_empty_changeset = true
@@ -22,7 +22,7 @@ stack_name = "live-auth-service"
 s3_prefix = "live-auth-service"
 region = "us-east-1"
 resolve_s3 = true
-capabilities = "CAPABILITY_IAM"
+capabilities = "CAPABILITY_IAM CAPABILITY_NAMED_IAM"
 parameter_overrides = "MainDomain=\"fastchargeapi.com\" Route53ZoneId=\"Z0358815GI2I8U5CTHXW\""
 image_repositories = []
 no_fail_on_empty_changeset = true
