--- a/gateway-service/template.yaml
+++ b/gateway-service/template.yaml
@@ -46,6 +46,7 @@ Resources:
   CloudWatchRole:
     Type: AWS::IAM::Role
     Properties:
+      RoleName: !Sub ${AWS::StackName}-CloudWatchRole
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
