[Payment] Add email and handle checkout.session.expired events

--- a/payment-service/template.yaml
+++ b/payment-service/template.yaml
@@ -256,6 +256,8 @@ Resources:
       BuildProperties:
         UseNpmCi: True
         Target: "es2022"
+        Loader:
+          - .hbs=file
         EntryPoints:
           - handlers/AcceptStripePayment.ts
 
