--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
   "bugs": {},
   "homepage": "",
   "devDependencies": {
+    "@glen/jest-raw-loader": "^2.0.0",
     "@graphql-codegen/cli": "^3.2.1",
     "@graphql-codegen/typescript-operations": "^3.0.1",
+    "@jest/globals": "^29.5.0",
+    "@types/jest": "^29.5.2",
     "@typescript-eslint/eslint-plugin": "^5.49.0",
     "@typescript-eslint/parser": "^5.49.0",
+    "babel-jest": "^29.5.0",
     "eslint": "^8.32.0",
     "eslint-config-standard-with-typescript": "^32.0.0",
     "eslint-plugin-import": "^2.27.5",
@@ -27,8 +31,10 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.1",
     "eslint-plugin-unused-imports": "^2.0.0",
+    "jest": "^29.5.0",
     "nodeman": "^1.1.2",
     "prettier": "^2.7.1",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
   }
