--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -36,6 +36,7 @@
     "@aws-sdk/client-dynamodb": "^3.258.0",
     "@aws-sdk/client-rds-data": "^3.344.0",
     "@aws-sdk/client-secrets-manager": "^3.347.1",
+    "@aws-sdk/client-ses": "^3.348.0",
     "@aws-sdk/client-sqs": "^3.272.0",
     "@aws-sdk/util-dynamodb": "^3.288.0",
     "@aws/dynamodb-data-mapper": "^0.7.3",
@@ -49,6 +50,7 @@
     "dynamoose-utils": "^3.1.0",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.20.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.0",
     "object-hash": "^3.0.0",
     "stripe": "^11.14.0",
@@ -58,6 +60,7 @@
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@glen/jest-raw-loader": "^2.0.0",
     "@graphql-codegen/cli": "^2.16.5",
     "@graphql-codegen/client-preset": "^2.0.0",
     "@graphql-codegen/typescript": "^2.8.7",
