--- a/auth-service/package.json
+++ b/auth-service/package.json
@@ -21,7 +21,7 @@
     "logs:live": "sam logs --config-env live --tail",
     "start": "(npm run build) && (sam local start-api -p 7000 --warm-containers=EAGER)",
     "watch": "nodemon -e go,graphql,yaml.json,ts -i generated__graphql.go -i __generated__ --signal SIGINT -x 'npm run start || exit 1'",
-    "test": "echo TODO (No tests yet)",
+    "test": "echo TODO No tests yet",
     "fix": "eslint --fix ./",
     "typecheck": "npm run gen && tsc --noEmit"
   },
