--- a/gateway-service/tsconfig.json
+++ b/gateway-service/tsconfig.json
@@ -1,21 +1,15 @@
 {
   "compilerOptions": {
-    "experimentalDecorators": true, /* Enable experimental support for TC39 stage 2 draft decorators. */
+    "experimentalDecorators": true /* Enable experimental support for TC39 stage 2 draft decorators. */,
     "skipLibCheck": true,
-    "rootDirs": [
-      "./"
-    ],
+    "rootDirs": ["./"],
     "outDir": "dist",
-    "lib": [
-      "es2022"
-    ],
+    "lib": ["es2022"],
     "target": "es2022",
     "module": "ES2022",
     "moduleResolution": "node",
     "esModuleInterop": true,
-    "types": [
-      "node",
-    ],
+    "types": ["node"],
     "noImplicitAny": true,
     "noImplicitThis": true,
     "alwaysStrict": true,
@@ -29,16 +23,9 @@
     "noEmit": true,
     "baseUrl": "./",
     "paths": {
-      "graphql-service": [
-        ".symlinks/graphql-service"
-      ],
-      "graphql-service/*": [
-        ".symlinks/graphql-service/*"
-      ],
+      "graphql-service": [".symlinks/graphql-service"],
+      "graphql-service/*": [".symlinks/graphql-service/*"]
     }
   },
-  "exclude": [
-    "node_modules",
-    "dist",
-  ]
+  "exclude": ["node_modules", "dist"]
 }
