--- a/graphql-service/apollo/tsconfig.json
+++ b/graphql-service/apollo/tsconfig.json
@@ -1,15 +1,21 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true /* Enable experimental support for TC39 stage 2 draft decorators. */,
+        "experimentalDecorators": true,
         "skipLibCheck": true,
-        "rootDirs": ["./"],
+        "rootDirs": [
+            "./"
+        ],
         "outDir": "dist",
-        "lib": ["es2022"],
+        "lib": [
+            "es2022"
+        ],
         "target": "es2022",
-        "module": "ES2022",
+        "module": "ESNext",
         "moduleResolution": "node",
         "esModuleInterop": true,
-        "types": ["node"],
+        "types": [
+            "node"
+        ],
         "noImplicitAny": true,
         "noImplicitThis": true,
         "alwaysStrict": true,
@@ -17,8 +23,16 @@
         "strictNullChecks": true,
         "useUnknownInCatchVariables": true,
         "strictFunctionTypes": false,
-        "strictPropertyInitialization": false, // doesn't work with our Item type declarations in models.ts
-        "allowJs": true
+        "strictPropertyInitialization": false,
+        "allowJs": true,
+        "resolveJsonModule": true,
+        "baseUrl": "./",
+        "paths": {},
+        "allowSyntheticDefaultImports": true,
+        "noEmit": true
     },
-    "exclude": ["node_modules", "dist"]
+    "exclude": [
+        "node_modules",
+        "dist"
+    ]
 }
