--- a/payment-service/package.json
+++ b/payment-service/package.json
@@ -4,6 +4,7 @@
   "description": "This project contains source code and supporting files for a serverless application that you can deploy with the SAM CLI. It includes the following files and folders.",
   "main": "index.js",
   "module": "node",
+  "type": "module",
   "directories": {
     "test": "tests"
   },
