[GraphQL,React] Add SiteMetaData and use the API in React

--- a/graphql-service/apollo/codegen.yml
+++ b/graphql-service/apollo/codegen.yml
@@ -41,12 +41,14 @@ generates:
         GatewayRequestCounter: ../dynamoose/models#GatewayRequestCounter
         GatewayRequestDecisionCache: ../dynamoose/models#GatewayRequestDecisionCache
         UserAppToken: ../dynamoose/models#UserAppToken
+        SiteMetaData: ../dynamoose/models#SiteMetaData
       enumValues:
         GatewayMode: ../dynamoose/models#GatewayMode
       scalars:
         Email: string
         Timestamp: number
         NonNegativeDecimal: string
+        Any: any
   ./__generated__/operation-types.ts:
     plugins:
       - "typescript"
@@ -59,4 +61,5 @@ generates:
         Email: string
         Timestamp: number
         NonNegativeDecimal: string
+        Any: any
       typesPrefix: GQL
