--- a/graphql-service/apollo/tsconfig.json
+++ b/graphql-service/apollo/tsconfig.json
@@ -1,38 +1,28 @@
 {
-    "compilerOptions": {
-        "experimentalDecorators": true,
-        "skipLibCheck": true,
-        "rootDirs": [
-            "./"
-        ],
-        "outDir": "dist",
-        "lib": [
-            "es2022"
-        ],
-        "target": "es2022",
-        "module": "ESNext",
-        "moduleResolution": "node",
-        "esModuleInterop": true,
-        "types": [
-            "node"
-        ],
-        "noImplicitAny": true,
-        "noImplicitThis": true,
-        "alwaysStrict": true,
-        "strictBindCallApply": true,
-        "strictNullChecks": true,
-        "useUnknownInCatchVariables": true,
-        "strictFunctionTypes": false,
-        "strictPropertyInitialization": false,
-        "allowJs": true,
-        "resolveJsonModule": true,
-        "baseUrl": "./",
-        "paths": {},
-        "allowSyntheticDefaultImports": true,
-        "noEmit": true
-    },
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+  "compilerOptions": {
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "rootDirs": ["./"],
+    "outDir": "dist",
+    "lib": ["es2022"],
+    "target": "es2022",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "types": ["node"],
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "alwaysStrict": true,
+    "strictBindCallApply": true,
+    "strictNullChecks": true,
+    "useUnknownInCatchVariables": true,
+    "strictFunctionTypes": false,
+    "strictPropertyInitialization": false,
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "baseUrl": "./",
+    "paths": {},
+    "allowSyntheticDefaultImports": true
+  },
+  "exclude": ["node_modules", "dist"]
 }
