--- a/graphql-service/template-dynamodb.yaml
+++ b/graphql-service/template-dynamodb.yaml
@@ -420,3 +420,18 @@ Resources:
               KeyType: "RANGE"
           Projection:
             ProjectionType: "KEYS_ONLY"
+
+  SiteMetaDataTagTable:
+    Type: "AWS::DynamoDB::Table"
+    Properties:
+      AttributeDefinitions:
+        - AttributeName: "key"
+          AttributeType: "S"
+      BillingMode: "PAY_PER_REQUEST"
+      TableName: !Join ["_", [!Ref TablePrefix, "SiteMetaData"]]
+      DeletionProtectionEnabled: !If [DeletionProtectionEnabled, true, false]
+      PointInTimeRecoverySpecification:
+        PointInTimeRecoveryEnabled: !If [PointInTimeRecoveryEnabled, true, false]
+      KeySchema:
+        - AttributeName: "key"
+          KeyType: "HASH"
