[CLI] Read Stripe fee from SiteMetaData

--- a/cli/graphql.config.yaml
+++ b/cli/graphql.config.yaml
@@ -35,6 +35,7 @@ projects:
           Email: str
           URL: str
           NonNegativeDecimal: str
+          Any: typing.Any
 
   tests:
     schema: "../graphql-service/apollo/schema/App.graphql"
