--- a/graphql-service/apollo/codegen.yml
+++ b/graphql-service/apollo/codegen.yml
@@ -3,14 +3,21 @@
 # documents:
 #   - "./cron-jobs/*.ts"
 schema: "./schema/App.graphql"
+documents:
+  - "./cron-jobs/*.ts"
+  - "./functions/*.ts"
+  - "./tests/**/*.ts"
 generates:
   # Specify where our generated types should live.
+  ./__generated__/gql/:
+    preset: client
   ./__generated__/resolvers-types.ts:
     plugins:
       - "typescript"
       - "typescript-resolvers"
       - "typescript-operations"
     config:
+      typesPrefix: GQL
       useIndexSignature: true
       # More on this below!
       contextType: "../RequestContext#RequestContext"
@@ -19,7 +26,6 @@ generates:
       # wrapFieldDefinitions: true
       # resolverTypeWrapperSignature: "{[k in keyof T]: (T[k] | ((args: any, context: RequestContext, info: GraphQLResolveInfo) => T[k]) | ((args: any, context: RequestContext, info: GraphQLResolveInfo) => Promise<T[k]>))}"
       useTypeImports: true
-      typesPrefix: GQL
       # avoidOptionals: true
       makeResolverTypeCallable: true
       customResolveInfo: "@apollo/cache-control-types#GraphQLResolveInfoWithCacheControl"
@@ -49,17 +55,3 @@ generates:
         Timestamp: number
         NonNegativeDecimal: string
         Any: any
-  ./__generated__/operation-types.ts:
-    plugins:
-      - "typescript"
-      - "typescript-operations"
-    documents:
-      - "./cron-jobs/*.ts"
-      - "./functions/*.ts"
-    config:
-      scalars:
-        Email: string
-        Timestamp: number
-        NonNegativeDecimal: string
-        Any: any
-      typesPrefix: GQL
