--- a/gateway-service/package.json
+++ b/gateway-service/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "This is a sample template for gateway-service - Below is a brief explanation of what we have generated for you:",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "symlink:linux": "mkdir -p .symlinks && ln -sFfT \"$(realpath ${PWD}/../graphql-service/apollo)\" .symlinks/graphql-service",
     "symlink:mac": "mkdir -p .symlinks && ln -sFh \"$(realpath ${PWD}/../graphql-service/apollo)\" .symlinks/graphql-service",
@@ -15,14 +16,18 @@
     "build:x86": "(npm run prebuild) && (sam build --parameter-overrides Architecture=x86_64 --use-container --build-image=public.ecr.aws/sam/build-go1.x:latest-x86_64)",
     "build:arm64": "(npm run prebuild) && (sam build --parameter-overrides Architecture=arm64)",
     "build": "npm run build:arm64",
-    "start": "npm run build && sam local start-api -p 6000 --warm-containers eager --env-vars ./devenv.json",
+    "prestart": "npm run build && npm run genenvfile",
+    "start": "sam local start-api -p 6000 --warm-containers eager --env-vars .samdevenv.json",
+    "poststart": "delenvfile > .samdevenv.json",
     "watch": "nodemon -e go,graphql,yaml -i __generated__/ --signal SIGINT -x 'npm run start || exit 1'",
     "logs": "sam logs --tail",
     "logs:live": "sam logs --config-env live --tail",
     "deploy": "npm run build && sam deploy",
     "deploy:live": "npm run build && sam deploy --config-env live",
     "typecheck": "(npm run gen) && (npm run try-build-all)",
-    "test": "jest"
+    "test": "jest",
+    "genenvfile": "npx ts-node-esm printEnvFile.ts > .samdevenv.json",
+    "delenvfile": "rm .samdevenv.json"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.114",
@@ -36,8 +41,11 @@
     "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
-    "uuid": "^9.0.0"
+    "uuid": "^9.0.0",
+    "@types/tmp": "^0.2.3",
+    "tmp": "^0.2.1"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {}
 }
